# agentic_harness

./: .env.example  .gitignore  CLAUDE.md  DEVLOG.md  README.md  docker-compose.yml  plan.md  pyproject.toml  tz.md
.GCC/: main.md
.GCC/branches/_example/: commit.md  log.md  metadata.yaml
.claude/: settings.json
.claude/agents/: developer.md  planner.md  reviewer.md  summarizer.md  tester.md
.claude/commands/: spec.md
deploy/: .env.example  Caddyfile  Dockerfile  README.md  deploy.sh  docker-compose.app.yml  docker-compose.caddy.yml
deploy/sample-app/: main.py
docker/: postgres-init.sql
harness/: __init__.py  __main__.py  checkpointer.py  config.py  curation.py  fixtures.py  graph.py  observability.py  schemas.py  state.py  store.py  tasks.py
harness/backends/: __init__.py  base.py  claude_sdk.py  own.py  stub.py
harness/own/: __init__.py  loop.py  model_client.py  tools.py
harness/vcs/: __init__.py  base.py  fake.py  git.py
orchestrator/: __init__.py  __main__.py  config.py  machine.py  roles.py  schemas.py  store.py
schemas/: commit.md  plan.md  reviewer_verdict.yaml  tester_verdict.yaml
templates/: metadata.yaml
tests/: test_backend_iface.py  test_claude_sdk_backend.py  test_cli.py  test_curation.py  test_git_vcs.py  test_graph.py  test_observability.py  test_own_backend.py  test_own_loop.py  test_own_model_client.py  test_own_tools.py  test_roles.py  test_scaffold.py  test_state.py  test_vcs_port.py
