[project]
name = "agentic-orchestrator"
version = "0.1.0"
description = "Deterministic Python orchestrator that drives dev/reviewer/tester roles via the Claude Agent SDK."
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["orchestrator"]
