[project]
name = "agentic-harness"
version = "0.1.0"
description = "Deterministic LangGraph FSM orchestrator over pluggable role backends (rewrite of the agentic-dev harness). See tz.md."
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.1",
    "claude-agent-sdk>=0.2",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "langfuse>=2.0",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]

# NOTE: lower bounds for now. After a successful online resolve we lock exact
# versions (tz.md: "Все версии зависимостей зафиксированы").
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
    "types-PyYAML",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["harness"]

[tool.setuptools.package-data]
harness = ["py.typed"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
files = ["harness", "tests"]

# Third-party submodules without bundled type stubs (add others as they're imported).
[[tool.mypy.overrides]]
module = ["langgraph.checkpoint.postgres.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Tests are function-style. Only collect classes ending in "Tests" so domain models
# named Test* (e.g. TesterVerdict) aren't mistaken for test classes.
python_classes = "*Tests"
